# server_stats

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build.sh  build_scw.sh  imagebuild.yaml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release.yml
assets/: sample_request.json  sample_response.json
deployment/: .env.docker  .env.production  .env.production.debug  DEBUG_LOGGING.md  DOCKER_DEPLOYMENT.md  INTEGRATION_SUMMARY.md  README.md  VM_DEPLOYMENT.md  deploy-docker.sh  deploy.sh  docker-compose.yml  model-server.service  nginx-docker.conf  nginx-model-server.conf
docs/: CLA.md  CONTRIBUTING.md  api.md
docs/citation/: ATTRIBUTION.md  CITATION.cff  CITE.txt  daylight-factor.bib
example/: demo.ipynb
src/: main.py
src/components/: constants.py  evaluator.py  extended_enum.py  image_transformations.py  metric_types.py
src/components/metrics/: __init__.py  base.py  compliance_metric.py  mae_metric.py  max_metric.py  mean_metric.py  median_metric.py  min_metric.py  quantized_iou.py  range_polygon_metric.py  threshold_accuracy.py  valid_area_metric.py
src/server/: __init__.py  constants.py  enums.py  flask_server.py  interfaces.py  metric_calculator.py  models.py  validator.py
src/server/controllers/: base_controller.py
src/server/services/: download.py  logging.py
src/utils/: extended_enum.py  maps.py
